--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <section>
         <div class="container">
             <div id="display">
-                <div class="previous">123123</div>
-                <div class="current">123123</div>
+                <div class="previous"></div>
+                <div class="current"></div>
             </div>
             <div class="buttons">
                 <div id="clearBtn" class="btn">C</div>
                 <div class="operators btn" >/</div>
                 <div class="operators btn" >*</div>
-                <div class="btn ">&larr;</div>
-                <div class="numbers btn" >7 </div>
+                <div id="delete" class="btn ">&larr;</div>
+                <div class="numbers btn" >7</div>
                 <div class="numbers btn" >8</div>
                 <div class="numbers btn" >9</div>
                 <div  class="operators btn" >-</div>
